--- a/index.html
+++ b/index.html
@@ -1,86 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tic Tac Toe Game</title>
-<style>
-    body {
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic Tac Toe Game</title>
+    <style>
+      body {
         font-family: Arial, sans-serif;
-    }
-    .container {
+        background-color: #333;
+        color: #fff;
+      }
+      .container {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-    }
-    .board {
+      }
+      .board {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 5px;
         width: 300px;
         height: 300px;
-    }
-    button {
-        font-size: 24px;
+      }
+      button {
+        font-size: 36px;
         height: 100px;
         width: 100px;
         border: 2px solid black;
-        background-color: #f0f0f0;
-    }
-</style>
-</head>
-<body>
-<div class="container">
-    <div class="board"></div>
-</div>
-<script>
-    const board = document.querySelector('.board');
-    let currentPlayer = 'X';
-    let moves = 0;
+        background-color: #333;
+        color: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container"><div class="board"></div></div>
+    <script>
+      const board = document.querySelector(".board");
+      let currentPlayer = "X";
+      let moves = 0;
 
-    const checkWinner = () => {
-        const cells = document.querySelectorAll('button');
+      const checkWinner = () => {
+        const cells = document.querySelectorAll("button");
         const lines = [
-            [0, 1, 2],
-            [3, 4, 5],
-            [6, 7, 8],
-            [0, 3, 6],
-            [1, 4, 7],
-            [2, 5, 8],
-            [0, 4, 8],
-            [2, 4, 6]
+          [0, 1, 2],
+          [3, 4, 5],
+          [6, 7, 8],
+          [0, 3, 6],
+          [1, 4, 7],
+          [2, 5, 8],
+          [0, 4, 8],
+          [2, 4, 6],
         ];
 
         for (let line of lines) {
-            const [a, b, c] = line;
-            if (cells[a].innerText && cells[a].innerText === cells[b].innerText && cells[a].innerText === cells[c].innerText) {
-                alert(`${currentPlayer} wins!`);
-                window.location.reload();
-                break;
-            }
+          const [a, b, c] = line;
+          if (
+            cells[a].innerText &&
+            cells[a].innerText === cells[b].innerText &&
+            cells[a].innerText === cells[c].innerText
+          ) {
+            alert(`${currentPlayer} wins!`);
+            window.location.reload();
+            break;
+          }
         }
 
         if (moves === 9) {
-            alert('It\'s a tie!');
-            window.location.reload();
+          alert("It's a tie!");
+          window.location.reload();
         }
-    }
+      };
 
-    const handleMove = (cell) => {
-        if (cell.innerText === '') {
-            cell.innerText = currentPlayer;
-            moves++;
-            checkWinner();
-            currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+      const handleMove = (cell) => {
+        if (cell.innerText === "") {
+          cell.innerText = currentPlayer;
+          moves++;
+          checkWinner();
+          currentPlayer = currentPlayer === "X" ? "O" : "X";
         }
-    }
+      };
 
-    for (let i = 0; i < 9; i++) {
-        const cell = document.createElement('button');
-        cell.addEventListener('click', () => handleMove(cell));
+      for (let i = 0; i < 9; i++) {
+        const cell = document.createElement("button");
+        cell.addEventListener("click", () => handleMove(cell));
         board.appendChild(cell);
-    }
-</script>
-</body>
+      }
+    </script>
+  </body>
 </html>
